--- a/06-Server-Side-APIs/16-NYTSearch/instructions/index.html
+++ b/06-Server-Side-APIs/16-NYTSearch/instructions/index.html
@@ -41,7 +41,7 @@
         <p>All the parameters are in this link: <a href='https://developer.nytimes.com/docs/articlesearch-product/1/routes/articlesearch.json/get'>https://developer.nytimes.com/docs/articlesearch-product/1/routes/articlesearch.json/get</a>
         </p>
         <br /><hr />
-        <h1>3.0 BUILD HTML UI (90 mins)</h1>
+        <h1>3.0 CODE (90 mins)</h1>
         <p>Build the initial UI, and remember to have input boxes to capture the fields 
             needed in the demo. 
         </p>
@@ -51,6 +51,7 @@
         </p>
         <p>Examine the API data and wire-up the result output to show the matching data.</p>
         <p><b>Remember to use a LOT of console.log comments to understand what is happening at each step of AJAX call.</b></p>
+        <br /><hr />
         <h1>4.0 CELEBRATE</h1>
         <p>Congratulations on tackling a challenging project like! Enjoy lunch, and we'll 
             announce teams when we are back!
